--- a/src/pages/Inicio/Inicio.module.scss
+++ b/src/pages/Inicio/Inicio.module.scss
@@ -17,7 +17,7 @@
     }
   }
   &__botao {
-    background-color: $red;
+    background-color: $primary-color;
     border: none;
     border-radius: 5px;
     color: white;
@@ -28,7 +28,7 @@
     transition: .2s ease;
     width: 100%;
     &:hover {
-      background-color: $red-dark;
+      background-color: $secondary-color;
     }
   }
 }
