--- a/src/pages/Sobre/Sobre.module.scss
+++ b/src/pages/Sobre/Sobre.module.scss
@@ -2,12 +2,13 @@
     display: flex;
     gap: 20px;
     margin-bottom: 50px;
+    width: 100%;
+    height: 286px;
     &__texto {
       display: flex;
       flex-direction: column;
       justify-content: center;
-      font-size: 1.5rem;
-      font-weight: bold;
+      font-size: 1rem;
       text-align: justify;
   p {
         font-family: 'Josefin Sans', sans-serif;
