Organizando as cachaças

--- a/src/pages/Prato/Prato.module.scss
+++ b/src/pages/Prato/Prato.module.scss
@@ -4,7 +4,7 @@
 .voltar {
   background-color: transparent;
   border: none;
-  color: $red;
+  color: $primary-color;
   cursor: pointer;
   font-size: 1.5rem;
   font-weight: bold;
