Leve organização da página inicial

--- a/src/pages/Inicio/Inicio.module.scss
+++ b/src/pages/Inicio/Inicio.module.scss
@@ -12,6 +12,7 @@
     width: 300px;
     margin-bottom: 10px;
     img {
+      max-height: 375px;
       border-radius: 8px;
       width: 100%;
     }
